--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <table class="imgtable">
                 <tr>
                     <td>
-                        <a href="./"><img src="./Files/ldp3.jpg" alt="" height="215px" /></a>&nbsp;
+                        <a href="./"><img src="./Files/chen.jpg" alt="" height="215px" /></a>&nbsp;
                     </td>
                     <td align="left">
                         <p><a href="./">
