--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta name="keywords"
-        content="Dapeng Li,李大鹏, Reinforcement Learning, Game Theory, Multi-Agent System, Institute of Automation, Chinese Academy of Sciences">
+        content="Chen GONG, 龚晨, Reinforcement Learning, Game Theory, Multi-Agent System, Institute of Automation, Chinese Academy of Sciences">
     <link rel="stylesheet" href="./Files/jemdoc.css" type="text/css" />
     <script src="jquery.min.js"></script>
     <link rel="shortcut icon" href="./Files/bitbug_favicon.ico">
