--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                     </td>
                     <td align="left">
                         <p><a href="./">
-                                <font size="4">Dapeng Li (</font>
-                                <font size="4" ; font style="font-family:Microsoft YaHei">李大鹏</font>
+                                <font size="4">Chen GONG (</font>
+                                <font size="4" ; font style="font-family:Microsoft YaHei">龚晨</font>
                                 <font size="4">)</font>
                             </a><br />
-                            <i> Ph.D Candidate </i>
+                            <i> Master Student </i>
                             <br /><br />
                             <a href="http://www.ia.cas.cn/" target="_blank">Institute of Automation</a>, <a
                                 href="https://www.cas.cn/" target="_blank">Chinese Academy of Sciences</a><br />
