--- a/index.html
+++ b/index.html
@@ -42,15 +42,16 @@
                                 <!-- <A HREF="#News">News</A> | -->
                                 <A HREF="#Interest">Research Interest</A> |
                                 <A HREF="#Education">Education</A> |
-                                <A HREF="#Awards">Awards</A> |
+                                <A HREF="#Publications">Research Experiences</A> |
                                 <A HREF="#Publications">Publications</A> |
+                                <A HREF="#Awards">Awards</A> |
                                 <!--<A HREF="#Projects">Projects</A> |-->
                                 <!--<A HREF="#Services">Services</A> |-->
  
                                 <br />
                                 <br />
 
-                                Email: lidapeng2020@ia.ac.cn
+                                Email: gongchen2020@ia.ac.cn
                                 <br />
                                 <!--[<a href="./Files/CV.pdf" target="_blank">CV</a>]-->
                                 <!-- [<a href="https://www.kaggle.com/li325040229" target="_blank">Kaggle</a>] -->
