--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
                                 <br />
                                 <!--[<a href="./Files/CV.pdf" target="_blank">CV</a>]-->
                                 <!-- [<a href="https://www.kaggle.com/li325040229" target="_blank">Kaggle</a>] -->
-                                <!-- [<a href="https://www.zhihu.com/people/dapeng-24-1" target="_blank">Zhihu</a>] -->
+                                [<a href="https://www.zhihu.com/people/dapeng-24-1" target="_blank">Zhihu</a>]
 
-                                [<a href="./Files/weixin.jpg" target="_blank">
+                                <!-- [<a href="./Files/weixin.jpg" target="_blank">
                                     <font style="font-family:Microsoft YaHei">Wechat</font>
                                 </a>]
-                                [公众号:Dapeng的记事本</a>]
+                                [公众号:Dapeng的记事本</a>] -->
                     </td>
                 </tr>
             </table>
