--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                 <br />
                                 <!--[<a href="./Files/CV.pdf" target="_blank">CV</a>]-->
                                 <!-- [<a href="https://www.kaggle.com/li325040229" target="_blank">Kaggle</a>] -->
-                                [<a href="https://www.zhihu.com/people/dapeng-24-1" target="_blank">Zhihu</a>]
+                                [<a href="https://www.zhihu.com/people/qing-kuang-shu-sheng-18-44" target="_blank">Zhihu</a>]
 
                                 <!-- [<a href="./Files/weixin.jpg" target="_blank">
                                     <font style="font-family:Microsoft YaHei">Wechat</font>
