--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                 <!-- <A HREF="#News">News</A> | -->
                                 <A HREF="#Interest">Research Interest</A> |
                                 <A HREF="#Education">Education</A> |
-                                <A HREF="#Publications">Research Experiences</A> |
+                                <A HREF="#Research Experiences">Research Experiences</A> |
                                 <A HREF="#Publications">Publications</A> |
                                 <A HREF="#Awards">Awards</A> |
                                 <!--<A HREF="#Projects">Projects</A> |-->
@@ -53,14 +53,14 @@
 
                                 Email: gongchen2020@ia.ac.cn
                                 <br />
-                                <!--[<a href="./Files/CV.pdf" target="_blank">CV</a>]-->
+                                [<a href="./Files/Chen_Gong_s_CV.pdf" target="_blank">CV</a>]
                                 <!-- [<a href="https://www.kaggle.com/li325040229" target="_blank">Kaggle</a>] -->
                                 [<a href="https://www.zhihu.com/people/qing-kuang-shu-sheng-18-44" target="_blank">Zhihu</a>]
 
                                 <!-- [<a href="./Files/weixin.jpg" target="_blank">
                                     <font style="font-family:Microsoft YaHei">Wechat</font>
                                 </a>]
-                                [公众号:Dapeng的记事本</a>] -->
+                                [] -->
                     </td>
                 </tr>
             </table>
@@ -97,13 +97,13 @@
             <A NAME="Interest">
                 <h2>Research Interest</h2>
             </A>
-            My research interests include reinforcement learning,multi-agent systems and data mining & analysis. Currently, I
+            My research interests include offline reinforcement learning, multi-agent systems and data mining & analysis. Currently, I
             focus on the following research topics:
             <ul>
-                <li>Multi-agent collaboration</li>
-                <li>Data efficiency of reinforcement learning</li>
-                <li>Partially observable Markov decision process</li>
-                <li>Opponent Modeling</li>
+                <li>Offline reinforcement learning</li>
+                <li>Adversarial policy </li>
+                <li>Generative model </li>
+                <li>Variational inference </li>
             </ul>
             <br />
 
