--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
                         href="http://www.ia.cas.cn/" target="_blank">Institute of Automation</a>, <a
                         href="https://www.cas.cn/" target="_blank">Chinese Academy of Sciences</a>.
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Supervisor:
-                    Prof. <a href="http://people.ucas.ac.cn/~fanguoliang" target="_blank">Guoliang Fan</a> </li>
+                    Prof. <a href="https://scholar.google.com/citations?hl=en&user=WFsqZskAAAAJ" target="_blank">Xinwen HOU</a> </li>
                 <li>2016.09-2020.06 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; B.E. in <a
-                        href="http://xxxb.bjut.edu.cn/" target="_blank">Department of information</a>, <a
-                        href="https://www.bjut.edu.cn/" target="_blank">Beijing University Of Technology</a>. 
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Major:Electronic Engineering
+                        href="https://sie.cugb.edu.cn/" target="_blank">School of Information Engineering</a>, <a
+                        href="https://www.cugb.edu.cn/" target="_blank">China University of Geosciences, Beijing</a>. 
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Major: Computer science and technology 
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </li>
             </ul>
             <br />
