--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
                 <h2>Education</h2>
             </A>
             <ul>
-                <li>2020.09-Now &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Ph.D in <a
+                <li>2020.09-Now &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; M.A. in <a
                         href="http://www.ia.cas.cn/" target="_blank">Institute of Automation</a>, <a
                         href="https://www.cas.cn/" target="_blank">Chinese Academy of Sciences</a>.
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Supervisor:
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Supervisor:
                     Prof. <a href="https://scholar.google.com/citations?hl=en&user=WFsqZskAAAAJ" target="_blank">Xinwen HOU</a> </li>
                 <li>2016.09-2020.06 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; B.E. in <a
                         href="https://sie.cugb.edu.cn/" target="_blank">School of Information Engineering</a>, <a
