--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <li>2020.09-Now &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; M.A. in <a
                         href="http://www.ia.cas.cn/" target="_blank">Institute of Automation</a>, <a
                         href="https://www.cas.cn/" target="_blank">Chinese Academy of Sciences</a>.
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     Supervisor:
                     Prof. <a href="https://scholar.google.com/citations?hl=en&user=WFsqZskAAAAJ" target="_blank">Xinwen HOU</a> </li>
                 <li>2016.09-2020.06 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; B.E. in <a
@@ -130,13 +130,13 @@
 
             
 
-            <A NAME="Awards">
-                <h2>Selected competitions and awards</h2>
+            <A NAME="Research Experiences">
+                <h2>Selected research experiences</h2>
             </A>
             <font size="3">
                 <ul>
 
-                    <li>2021,Golden Wind Cup ,Tsinghua | Grand Prize (1/158)</li>
+                    <li>2021.08-Now , School of Computing and Information Systems, Singapore Management University, Supervisor: Prof. <a href="https://scholar.google.com/citations?user=Ra4bt-oAAAAJ&hl=zh-CN" target="_blank">David Lo</a> </li>
                     <li>2021,Tianchi Global AI Innovation Contest | 1st (1/4337)</li>
                     <li>2021,Global Open Data Application Innovation Competition, Road Detection track | 2rd (2/423)</li>
                     <li>2021,Global Open Data Application Innovation Competition, Wind Field Downscaling track | 3rd (3/172)
