--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
 
                                 Email: gongchen2020@ia.ac.cn
                                 <br />
+                               
                                 [<a href="./Files/Chen_Gong_s_CV.pdf" target="_blank">CV</a>]
+                                [<a href="https://scholar.google.com/citations?hl=zh-CN&user=QgfEpScAAAAJ>Google scholar</a>]
                                 <!-- [<a href="https://www.kaggle.com/li325040229" target="_blank">Kaggle</a>] -->
                                 [<a href="https://www.zhihu.com/people/qing-kuang-shu-sheng-18-44" target="_blank">Zhihu</a>]
 
