--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                 <br />
                                
                                 [<a href="./Files/Chen_Gong_s_CV.pdf" target="_blank">CV</a>]
-                                [<a href="https://scholar.google.com/citations?hl=zh-CN&user=QgfEpScAAAAJ>Google scholar</a>]
+                                [<a href="https://scholar.google.com/citations?hl=zh-CN&user=QgfEpScAAAAJ"target="_blank">Google scholar</a>]
                             
                                 [<a href="https://www.zhihu.com/people/qing-kuang-shu-sheng-18-44" target="_blank">Zhihu</a>]
 
