--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <A NAME="Interest">
                 <h2>Research Interest</h2>
             </A>
-            My research interests include offline reinforcement learning, multi-agent systems and data mining & analysis. Currently, I
+            My research interests include reinforcement learning, sampling method and generative model. Currently, I
             focus on the following research topics:
             <ul>
                 <li>Offline reinforcement learning</li>
@@ -138,7 +138,8 @@
             <font size="3">
                 <ul>
 
-                    <li>2021.08-Now , School of Computing and Information Systems, Singapore Management University, Supervisor: Prof. <a href="https://scholar.google.com/citations?user=Ra4bt-oAAAAJ&hl=zh-CN" target="_blank">David Lo</a> </li>
+                    <li>2021.08-Now, Visiting student, School of Computing and Information Systems, Singapore Management University, Singapore, Supervisor: Prof. <a href="https://scholar.google.com/citations?user=Ra4bt-oAAAAJ&hl=zh-CN" target="_blank">David Lo</a>
+                     | Adversarial Policy Learning \&  Reinforcement Learning Algorithm Testing </li>
                     <li>2021,Tianchi Global AI Innovation Contest | 1st (1/4337)</li>
                     <li>2021,Global Open Data Application Innovation Competition, Road Detection track | 2rd (2/423)</li>
                     <li>2021,Global Open Data Application Innovation Competition, Wind Field Downscaling track | 3rd (3/172)
