--- a/index.html
+++ b/index.html
@@ -212,10 +212,11 @@
                 <h2>Awards & Honors</h2>
             </A>
             <ul>
-                <b> Awards <b>
-                <li> 2020, the COMAP's Mathematical Contest in Modeling, <b> Finalist <b> <li>
-                <br />
-                <br />
+                <p><b>Pre-print</b>: </p>
+                <font size="3">
+                <ul>
+                    <li> 2020, the COMAP's Mathematical Contest in Modeling, <b> Finalist <b> <li>
+                <ul>
                 <b> Honors <b>
                 <li> 2021, University of Chinese Academy of Sciences, <b> Merit Student <b> <li>
             </ul>
