--- a/index.html
+++ b/index.html
@@ -194,11 +194,11 @@
                 <p><b>Awards</b>: </p>
                 <font size="3">
                 <ul>
-                    <li> 2020, the COMAP's Mathematical Contest in Modeling, <b> Finalist <b> <li>
-                    <li> 2019, the COMAP's Mathematical Contest in Modeling, <b> Meritorious Winner <b> <li>
-                    <li> 2018, the COMAP's Mathematical Contest in Modeling, <b> Honorable Mention <b> <li>
-                    <li> 2018, the Contemporary Undergraduate Mathematical Contest in Modeling, <b> First prize in Beijing <b> <li>
-                    <li> 2017, the Mathematics Competition of China University of Geosciences, <b> First prize <b> <li>
+                    <li> 2020, the COMAP's Mathematical Contest in Modeling, <b> Finalist </b> <li>
+                    <li> 2019, the COMAP's Mathematical Contest in Modeling, <b> Meritorious Winner </b> <li>
+                    <li> 2018, the COMAP's Mathematical Contest in Modeling, <b> Honorable Mention </b> <li>
+                    <li> 2018, the Contemporary Undergraduate Mathematical Contest in Modeling, <b> First prize in Beijing </b> <li>
+                    <li> 2017, the Mathematics Competition of China University of Geosciences, <b> First prize </b> <li>
                 <ul>
                     
                 <p><b>Honors</b>: </p>
