--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <li>2020.09-Now &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; M.A. in <a
                         href="http://www.ia.cas.cn/" target="_blank">Institute of Automation</a>, <a
                         href="https://www.cas.cn/" target="_blank">Chinese Academy of Sciences</a>.
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     Supervisor:
                     Prof. <a href="https://scholar.google.com/citations?hl=en&user=WFsqZskAAAAJ" target="_blank">Xinwen HOU</a> </li>
                 <li>2016.09-2020.06 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; B.E. in <a
@@ -194,11 +194,11 @@
                 <p><b>Awards</b>: </p>
                 <font size="3">
                 <ul>
-                    <li> 2020, the COMAP's Mathematical Contest in Modeling, <b> Finalist </b> <li>
-                    <li> 2019, the COMAP's Mathematical Contest in Modeling, <b> Meritorious Winner </b> <li>
-                    <li> 2018, the COMAP's Mathematical Contest in Modeling, <b> Honorable Mention </b> <li>
-                    <li> 2018, the Contemporary Undergraduate Mathematical Contest in Modeling, <b> First prize in Beijing </b> <li>
-                    <li> 2017, the Mathematics Competition of China University of Geosciences, <b> First prize </b> <li>
+                    <li> 2020, the COMAP's Mathematical Contest in Modeling, <b> Finalist </b> </li>
+                    <li> 2019, the COMAP's Mathematical Contest in Modeling, <b> Meritorious Winner </b> </li>
+                    <li> 2018, the COMAP's Mathematical Contest in Modeling, <b> Honorable Mention </b> </li>
+                    <li> 2018, the Contemporary Undergraduate Mathematical Contest in Modeling, <b> First prize in Beijing </b> </li>
+                    <li> 2017, the Mathematics Competition of China University of Geosciences, <b> First prize </b> </li>
                 <ul>
                     
                 <p><b>Honors</b>: </p>
