--- a/index.html
+++ b/index.html
@@ -204,8 +204,12 @@
                 <p><b>Honors</b>: </p>
                 <font size="3">
                 <ul>
-                    <li> 2020, the COMAP's Mathematical Contest in Modeling, <b> Finalist <b> <li>
-                <ul>
+                    <li> 2021, University of Chinese Academy of Sciences, <b> Merit Student </b> </li>
+                    <li> 2020, Beijing Municipal Education Commission, <b> Beijing Outstanding Graduates </b> </li>
+                    <li> 2020, China University Of Geosciences, Beijing, <b> School-level Excellent Graduation Thesis </b> </li>
+                    <li> 2017, China University Of Geosciences , Beijing, <b> Outstanding Member </b> </li>
+                    <li> 2017, Ministry of Education of the people's Republic of China, <b> National Scholarship for Undergraduates </b> </li>
+                </ul>
             
             <br />
 
