--- a/index.html
+++ b/index.html
@@ -172,7 +172,17 @@
                     </p>
                 </ul>
                 <br />
-
+                
+                <p><b>Journals</b>: </p>
+                <font size="3">
+                    <ul>
+                        <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                            <span>[1] Zhiwei Xu, Bin Zhang, Yunpeng Bai, <b>Dapeng Li</b>, and Guoliang Fan*,
+                                “Learning to Coordinate via Multiple Graph Neural Networks”,
+                                [<a href="https://arxiv.org/abs/2104.03503" target="_blank">Arxiv</a>]
+                            </span>
+                        </p>
+                    </ul>
 
 
                 <p><b>Pre-print</b>: </p>
@@ -199,7 +209,7 @@
                     <li> 2018, the COMAP's Mathematical Contest in Modeling, <b> Honorable Mention </b> </li>
                     <li> 2018, the Contemporary Undergraduate Mathematical Contest in Modeling, <b> First prize in Beijing </b> </li>
                     <li> 2017, the Mathematics Competition of China University of Geosciences, <b> First prize </b> </li>
-                <ul>
+                </ul>
                     
                 <p><b>Honors</b>: </p>
                 <font size="3">
