--- a/index.html
+++ b/index.html
@@ -157,9 +157,6 @@
             <p><b>Conferences</b>: </p>
             <font size="3">
                 <ul>
-
-
-
                     <p style="text-indent: -1.6rem;margin-left: 0rem;">
                         <span>[1] Zhiwei Xu,<b>Dapeng Li</b>, Yunpeng Bai, and Guoliang Fan*,
                             “MMD-MIX: Value Function Factorisation with Maximum Mean Discrepancy for Cooperative
@@ -177,7 +174,16 @@
                 <font size="3">
                     <ul>
                         <p style="text-indent: -1.6rem;margin-left: 0rem;">
-                            <span>[1] Zhiwei Xu, Bin Zhang, Yunpeng Bai, <b>Dapeng Li</b>, and Guoliang Fan*,
+                            <span>[1] <b>Chen Gong</b>, Xiaoxiong Zhang, Yunun Niu.
+                                “Identification of epilepsy from intracranial EEG signals by using different neural network models”, 2020, 87: 107310. (IF=2.88)
+                                <i>Computational Biology and Chemistry</i>,
+                                [<a href="https://www.sciencedirect.com/science/article/abs/pii/S1476927120305806" target="_blank">Paper</a>]
+                            </span>
+                            <span>[2] Zhiwei Xu, Bin Zhang, Yunpeng Bai, <b>Dapeng Li</b>, and Guoliang Fan*,
+                                “Learning to Coordinate via Multiple Graph Neural Networks”,
+                                [<a href="https://arxiv.org/abs/2104.03503" target="_blank">Arxiv</a>]
+                            </span>
+                            <span>[3] Zhiwei Xu, Bin Zhang, Yunpeng Bai, <b>Dapeng Li</b>, and Guoliang Fan*,
                                 “Learning to Coordinate via Multiple Graph Neural Networks”,
                                 [<a href="https://arxiv.org/abs/2104.03503" target="_blank">Arxiv</a>]
                             </span>
