--- a/index.html
+++ b/index.html
@@ -175,15 +175,15 @@
                     <ul>
                         <p style="text-indent: -1.6rem;margin-left: 0rem;">
                             <span>[1] <b>Chen Gong</b>, Xiaoxiong Zhang, Yunun Niu.
-                                “Identification of epilepsy from intracranial EEG signals by using different neural network models”, 2020, 87: 107310. (IF=2.88)
-                                <i>Computational Biology and Chemistry</i>,
+                                “Identification of epilepsy from intracranial EEG signals by using different neural network models”,
+                                <i>Computational Biology and Chemistry</i>, , 2020, 87: 107310. (IF=2.88)
                                 [<a href="https://www.sciencedirect.com/science/article/abs/pii/S1476927120305806" target="_blank">Paper</a>]
                             </span>
-                            <br>
-                            </br>
-                            <span>[2] Zhiwei Xu, Bin Zhang, Yunpeng Bai, <b>Dapeng Li</b>, and Guoliang Fan*,
-                                “Learning to Coordinate via Multiple Graph Neural Networks”,
-                                [<a href="https://arxiv.org/abs/2104.03503" target="_blank">Arxiv</a>]
+                        <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                            <span>[2] <b>Chen Gong</b>, Jiahui Liu, Yunyun Niu.
+                                “Intracranial Epileptic Seizures Detection Based on an Optimized Neural Network Classifier”, 
+                                <i>Chinese Journal of Electronics</i>, 2021, 30(3): 419-425. (IF=1.01)
+                                [<a href="https://ietresearch.onlinelibrary.wiley.com/doi/full/10.1049/cje.2021.03.005" target="_blank">Paper</a>]
                             </span>
                             <br>
                             </br>
