--- a/index.html
+++ b/index.html
@@ -187,9 +187,10 @@
                             </span>
                             <br>
                             </br>
-                            <span>[3] Zhiwei Xu, Bin Zhang, Yunpeng Bai, <b>Dapeng Li</b>, and Guoliang Fan*,
-                                “Learning to Coordinate via Multiple Graph Neural Networks”,
-                                [<a href="https://arxiv.org/abs/2104.03503" target="_blank">Arxiv</a>]
+                            <span>[3] <b>Chen Gong</b>, Xinchen Zhou, Yunyun Niu.
+                                “Pattern recognition of epilepsy using parallel probabilistic neural network”, 
+                                <i>Applied Intelligence</i>, 2021: 1-12. (IF=5.09)
+                                [<a href="https://link.springer.com/article/10.1007/s10489-021-02509-w" target="_blank">Paper</a>]
                             </span>
                         </p>
                     </ul>
