--- a/index.html
+++ b/index.html
@@ -158,13 +158,21 @@
             <font size="3">
                 <ul>
                     <p style="text-indent: -1.6rem;margin-left: 0rem;">
-                        <span>[1] Zhiwei Xu,<b>Dapeng Li</b>, Yunpeng Bai, and Guoliang Fan*,
-                            “MMD-MIX: Value Function Factorisation with Maximum Mean Discrepancy for Cooperative
-                            Multi-Agent Reinforcement Learning”,
-                            <i>International Joint Conference on Neural Networks(<b>IJCNN</b>)</i>,
-                            in Shenzhen, China, 2021.
-                            (<b>Poster</b>)
-                            [<a href="https://arxiv.org/abs/2106.11652" target="_blank">Arxiv</a>]
+                        <span>[1] <b>Chen Gong</b>, Yunpeng Bai, Xinwen Hou, Xiaohui Ji.
+                            “Stable Training of Bellman Error in Reinforcement Learning”,
+                            <i>International Conference on Neural Information Processing(<b>ICONIP</b>)</i>,
+                            2020:439-448.
+                            (<b>Oral</b>)
+                            [<a href="https://link.springer.com/chapter/10.1007/978-3-030-63823-8_51" target="_blank">Paper</a>]
+                        </span>
+                    </p>
+                    <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                        <span>[1] <b>Chen Gong</b>, Yunpeng Bai, Xinwen Hou, Xiaohui Ji.
+                            “Stable Training of Bellman Error in Reinforcement Learning”,
+                            <i>International Conference on Neural Information Processing(<b>ICONIP</b>)</i>,
+                            2020:439-448.
+                            (<b>Oral</b>)
+                            [<a href="https://link.springer.com/chapter/10.1007/978-3-030-63823-8_51" target="_blank">Paper</a>]
                         </span>
                     </p>
                 </ul>
@@ -179,14 +187,15 @@
                                 <i>Computational Biology and Chemistry</i>, , 2020, 87: 107310. (IF=2.88)
                                 [<a href="https://www.sciencedirect.com/science/article/abs/pii/S1476927120305806" target="_blank">Paper</a>]
                             </span>
+                        </p>
                         <p style="text-indent: -1.6rem;margin-left: 0rem;">
                             <span>[2] <b>Chen Gong</b>, Jiahui Liu, Yunyun Niu.
                                 “Intracranial Epileptic Seizures Detection Based on an Optimized Neural Network Classifier”, 
                                 <i>Chinese Journal of Electronics</i>, 2021, 30(3): 419-425. (IF=1.01)
                                 [<a href="https://ietresearch.onlinelibrary.wiley.com/doi/full/10.1049/cje.2021.03.005" target="_blank">Paper</a>]
                             </span>
-                            <br>
-                            </br>
+                        </p>
+                        <p style="text-indent: -1.6rem;margin-left: 0rem;">
                             <span>[3] <b>Chen Gong</b>, Xinchen Zhou, Yunyun Niu.
                                 “Pattern recognition of epilepsy using parallel probabilistic neural network”, 
                                 <i>Applied Intelligence</i>, 2021: 1-12. (IF=5.09)
