--- a/index.html
+++ b/index.html
@@ -167,12 +167,12 @@
                         </span>
                     </p>
                     <p style="text-indent: -1.6rem;margin-left: 0rem;">
-                        <span>[1] <b>Chen Gong</b>, Yunpeng Bai, Xinwen Hou, Xiaohui Ji.
-                            “Stable Training of Bellman Error in Reinforcement Learning”,
-                            <i>International Conference on Neural Information Processing(<b>ICONIP</b>)</i>,
-                            2020:439-448.
+                        <span>[1] <b>Chen Gong</b>*, Qiang He*, Yunpeng Bai, Xinwen Hou, Guoliang Fan, Yu Liu
+                            “Wide-Sense Stationary Policy Optimization with Bellman Residual on Video Games”,
+                            <i>IEEE International Conference on Multimedia and Expo(<b>ICME</b>)</i>,
+                            2021: 1-6.
                             (<b>Oral</b>)
-                            [<a href="https://link.springer.com/chapter/10.1007/978-3-030-63823-8_51" target="_blank">Paper</a>]
+                            [<a href="https://ieeexplore.ieee.org/document/9428293" target="_blank">Paper</a>]
                         </span>
                     </p>
                 </ul>
