--- a/index.html
+++ b/index.html
@@ -209,9 +209,21 @@
                 <font size="3">
                     <ul>
                         <p style="text-indent: -1.6rem;margin-left: 0rem;">
-                            <span>[1] Zhiwei Xu, Bin Zhang, Yunpeng Bai, <b>Dapeng Li</b>, and Guoliang Fan*,
-                                “Learning to Coordinate via Multiple Graph Neural Networks”,
-                                [<a href="https://arxiv.org/abs/2104.03503" target="_blank">Arxiv</a>]
+                            <span>[1] <b>Chen Gong</b>*, Qiang He*, Yunpeng Bai*, Xiaoyu Chen, Xinwen Hou, Yu Liu, Guoliang Fan,
+                                “Combing Policy Evaluation and Policy Improvement in a Unified f-Divergence Framework”.
+                                [<a href="https://arxiv.org/abs/2109.11867" target="_blank">Arxiv</a>]
+                            </span>
+                        </p>
+                        <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                            <span>[2] Xiaoyu Chen*, <b>Chen Gong</b>*, Qiang He, Xinwen Hou, Yu Liu,
+                                “LDC-VAE: A Latent Distribution Consistency Approach to Variational AutoEncoders”.
+                                [<a href="https://arxiv.org/abs/2109.10640" target="_blank">Arxiv</a>]
+                            </span>
+                        </p>
+                        <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                            <span>[3] Qiang He, <b>Chen Gong</b>, Yuxun Qu, Xiaoyu Chen, Xinwen Hou, Yu Liu,
+                                “MEPG: A Minimalist Ensemble Policy Gradient Framework for Deep Reinforcement Learning”.
+                                [<a href="https://arxiv.org/abs/2109.10552" target="_blank">Arxiv</a>]
                             </span>
                         </p>
                     </ul>
