--- a/index.html
+++ b/index.html
@@ -138,9 +138,14 @@
             <font size="3">
                 <ul>
 
-                    <li>2021.08-Now, Visiting student, School of Computing and Information Systems, Singapore Management University, Singapore, Supervisor: Prof. <a href="https://scholar.google.com/citations?user=Ra4bt-oAAAAJ&hl=zh-CN" target="_blank">David Lo</a>
+                    <li>2021.08-Now, School of Computing and Information Systems, Singapore Management University, Singapore, Supervisor: Prof. <a href="https://scholar.google.com/citations?user=Ra4bt-oAAAAJ&hl=zh-CN" target="_blank">David Lo</a>
                      | Adversarial Policy Learning &  Reinforcement Learning Algorithm Testing </li>
-                    <li>2021,Tianchi Global AI Innovation Contest | 1st (1/4337)</li>
+                    <li>2021.02-Now, Institute of Automation, Chinese Academy of Sciences, Beijing, China, Supervisor:
+                    Prof. <a href="https://scholar.google.com/citations?hl=en&user=WFsqZskAAAAJ" target="_blank">Xinwen HOU</a> | Offline Reinforcement learning, Off-policy evaluation, Convex duality & Generative model </li>
+                    <li>2019.11-2020.12, Institute of Automation, Chinese Academy of Sciences, Beijing, China, Supervisor:
+                    Prof. <a href="https://scholar.google.com/citations?hl=en&user=WFsqZskAAAAJ" target="_blank">Xinwen HOU</a> | Reinforcement learning & Variational inference </li>
+                    <li>2021.08-Now, School of Computing and Information Systems, Singapore Management University, Singapore, Supervisor: Prof. <a href="https://scholar.google.com/citations?user=Ra4bt-oAAAAJ&hl=zh-CN" target="_blank">David Lo</a>
+                     | Adversarial Policy Learning &  Reinforcement Learning Algorithm Testing </li>
                 </ul>
             </font>
 
