--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
                     Prof. <a href="https://scholar.google.com/citations?hl=en&user=WFsqZskAAAAJ" target="_blank">Xinwen HOU</a> | Offline Reinforcement learning, Off-policy evaluation, Convex duality & Generative model </li>
                     <li>2019.11-2020.12, Institute of Automation, Chinese Academy of Sciences, Beijing, China, Supervisor:
                     Prof. <a href="https://scholar.google.com/citations?hl=en&user=WFsqZskAAAAJ" target="_blank">Xinwen HOU</a> | Reinforcement learning & Variational inference </li>
-                    <li>2021.08-Now, School of Computing and Information Systems, Singapore Management University, Singapore, Supervisor: Prof. <a href="https://scholar.google.com/citations?user=Ra4bt-oAAAAJ&hl=zh-CN" target="_blank">David Lo</a>
-                     | Adversarial Policy Learning &  Reinforcement Learning Algorithm Testing </li>
+                    <li>2017.12-2019.02, China University of Geosciences, Beijing, China, Supervisor:
+                    Prof. <a href="https://dblp.org/pid/57/9704.html" target="_blank">Yunyun Niu</a> | Machine learning in medicine </li>
                 </ul>
             </font>
 
