--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta name="keywords"
-        content="Chen GONG, 龚晨, Reinforcement Learning, Game Theory, Multi-Agent System, Institute of Automation, Chinese Academy of Sciences">
+        content="Chen GONG, 龚晨, Reinforcement Learning, convex duality">
     <link rel="stylesheet" href="./Files/jemdoc.css" type="text/css" />
     <script src="jquery.min.js"></script>
     <link rel="shortcut icon" href="./Files/bitbug_favicon.ico">
-    <title>Dapeng Li</title>
+    <title>Chen GONG</title>
 </head>
 
 
@@ -103,6 +103,7 @@
             focus on the following research topics:
             <ul>
                 <li>Offline reinforcement learning</li>
+                <li>Convex duality in reinforcement learning</li>
                 <li>Adversarial policy </li>
                 <li>Generative model </li>
                 <li>Variational inference </li>
