--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         content="Chen GONG, 龚晨, Reinforcement Learning, convex duality">
     <link rel="stylesheet" href="./Files/jemdoc.css" type="text/css" />
     <script src="jquery.min.js"></script>
-    <link rel="shortcut icon" href="./Files/bitbug_favicon.ico">
+    <link rel="shortcut icon" href="./Files/ai.png">
     <title>Chen GONG</title>
 </head>
 
