--- a/index.html
+++ b/index.html
@@ -117,8 +117,14 @@
                 <h2>Education</h2>
             </A>
             <ul>
+                <li>2021.08-Now &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Visiting M.A. in <a
+                        href="http://www.ia.cas.cn/" target="_blank">School of Computing and Information Systems</a>, <a
+                        href="https://scis.smu.edu.sg/" target="_blank">Singapore Management University</a>.
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    Supervisor:
+                    Prof. <a href="https://scholar.google.com/citations?user=Ra4bt-oAAAAJ&hl=zh-CN" target="_blank">David Lo</a> </li>
                 <li>2020.09-Now &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; M.A. in <a
-                        href="http://www.ia.cas.cn/" target="_blank">Institute of Automation</a>, <a
+                        href="https://www.smu.edu.sg/" target="_blank">Institute of Automation</a>, <a
                         href="https://www.cas.cn/" target="_blank">Chinese Academy of Sciences</a>.
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     Supervisor:
