--- a/index.html
+++ b/index.html
@@ -176,12 +176,12 @@
             <font size="3">
                 <ul>
                     <p style="text-indent: -1.6rem;margin-left: 0rem;">
-                        <span>[1] <b>Chen Gong</b>, Yunpeng Bai, Xinwen Hou, Xiaohui Ji.
-                            “Stable Training of Bellman Error in Reinforcement Learning”,
-                            <i>International Conference on Neural Information Processing (<b>ICONIP</b>)</i>,
-                            2020:439-448.
+                        <span>[1] Yunpeng Bai*, <b>Chen Gong</b>*, Bin Zhang,  Guoliang Fan, Xinwen Hou, Yu Liu.
+                            “Cooperative Multi-Agent Reinforcement Learning with Hypergraph Convolution”,
+                            <i>International Joint Conference on Neural Networks (<b>IJCNN</b>)</i>,
+                            2022.
                             (<b>Oral</b>)
-                            [<a href="https://link.springer.com/chapter/10.1007/978-3-030-63823-8_51" target="_blank">Paper</a>]
+                            [<a href="https://arxiv.org/pdf/2112.06771.pdf" target="_blank">Paper</a>]
                         </span>
                     </p>
                     <p style="text-indent: -1.6rem;margin-left: 0rem;">
@@ -191,6 +191,15 @@
                             2021: 1-6.
                             (<b>Oral</b>)
                             [<a href="https://ieeexplore.ieee.org/document/9428293" target="_blank">Paper</a>]
+                        </span>
+                    </p>
+                    <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                        <span>[3] <b>Chen Gong</b>, Yunpeng Bai, Xinwen Hou, Xiaohui Ji.
+                            “Stable Training of Bellman Error in Reinforcement Learning”,
+                            <i>International Conference on Neural Information Processing (<b>ICONIP</b>)</i>,
+                            2020:439-448.
+                            (<b>Oral</b>)
+                            [<a href="https://link.springer.com/chapter/10.1007/978-3-030-63823-8_51" target="_blank">Paper</a>]
                         </span>
                     </p>
                 </ul>
