--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
                 <font size="3">
                     <ul>
                         <p style="text-indent: -1.6rem;margin-left: 0rem;">
-                            <span>[1] <b>Chen Gong</b>*, Qiang He*, Yunpeng Bai*, Xiaoyu Chen, Xinwen Hou, Yu Liu, Guoliang Fan,
-                                “Combing Policy Evaluation and Policy Improvement in a Unified f-Divergence Framework”.
+                            <span>[1] <b>Chen Gong</b>*, Qiang He*, Yunpeng Bai*, Zhou Yang, Xiaoyu Chen, Xinwen Hou, Xianjie Zhang, Yu Liu, Guoliang Fan.
+                                “The f-Divergence Reinforcement Learning Framework”.
                                 [<a href="https://arxiv.org/abs/2109.11867" target="_blank">Arxiv</a>]
                             </span>
                         </p>
