--- a/index.html
+++ b/index.html
@@ -176,7 +176,15 @@
             <font size="3">
                 <ul>
                     <p style="text-indent: -1.6rem;margin-left: 0rem;">
-                        <span>[1] Yunpeng Bai*, <b>Chen Gong</b>*, Bin Zhang,  Guoliang Fan, Xinwen Hou, Yu Liu.
+                            <span>[4] Qiang He, Huangyuan Su , <b>Chen Gong</b>, Xinwen Hou,
+                                “MEPG: A Minimalist Ensemble Policy Gradient Framework for Deep Reinforcement Learning”,
+                                <i>International Joint Conference on Neural Networks (<b>IJCNN</b>)</i>,
+                               2022.
+                                [<a href="https://arxiv.org/abs/2109.10552" target="_blank">Arxiv</a>]
+                            </span>
+                    </p>
+                    <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                        <span>[3] Yunpeng Bai*, <b>Chen Gong</b>*, Bin Zhang,  Guoliang Fan, Xinwen Hou, Yu Liu.
                             “Cooperative Multi-Agent Reinforcement Learning with Hypergraph Convolution”,
                             <i>International Joint Conference on Neural Networks (<b>IJCNN</b>)</i>,
                             2022.
@@ -194,7 +202,7 @@
                         </span>
                     </p>
                     <p style="text-indent: -1.6rem;margin-left: 0rem;">
-                        <span>[3] <b>Chen Gong</b>, Yunpeng Bai, Xinwen Hou, Xiaohui Ji.
+                        <span>[1] <b>Chen Gong</b>, Yunpeng Bai, Xinwen Hou, Xiaohui Ji.
                             “Stable Training of Bellman Error in Reinforcement Learning”,
                             <i>International Conference on Neural Information Processing (<b>ICONIP</b>)</i>,
                             2020:439-448.
@@ -245,12 +253,6 @@
                             <span>[2] Xiaoyu Chen*, <b>Chen Gong</b>*, Qiang He, Xinwen Hou, Yu Liu,
                                 “LDC-VAE: A Latent Distribution Consistency Approach to Variational AutoEncoders”.
                                 [<a href="https://arxiv.org/abs/2109.10640" target="_blank">Arxiv</a>]
-                            </span>
-                        </p>
-                        <p style="text-indent: -1.6rem;margin-left: 0rem;">
-                            <span>[3] Qiang He, <b>Chen Gong</b>, Yuxun Qu, Xiaoyu Chen, Xinwen Hou, Yu Liu,
-                                “MEPG: A Minimalist Ensemble Policy Gradient Framework for Deep Reinforcement Learning”.
-                                [<a href="https://arxiv.org/abs/2109.10552" target="_blank">Arxiv</a>]
                             </span>
                         </p>
                     </ul>
