--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <p style="text-indent: -1.6rem;margin-left: 0rem;">
                             <span>[4] Qiang He, Huangyuan Su, <b>Chen Gong</b>, Xinwen Hou,
                                 “MEPG: A Minimalist Ensemble Policy Gradient Framework for Deep Reinforcement Learning”,
-                                <i>Decision Awareness in Reinforcement Learning Workshop at ICML 2022 </i>,
+                                <i>Decision Awareness in Reinforcement Learning Workshop at ICML</i>,
                                2022.
                                 [<a href="https://arxiv.org/abs/2109.10552" target="_blank">Arxiv</a>]
                             </span>
