--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
                                 “MEPG: A Minimalist Ensemble Policy Gradient Framework for Deep Reinforcement Learning”,
                                 <i>Decision Awareness in Reinforcement Learning Workshop at ICML</i>,
                                2022.
+                                (<b>Poster</b>)
                                 [<a href="https://arxiv.org/abs/2109.10552" target="_blank">Arxiv</a>]
                             </span>
                     </p>
