--- a/index.html
+++ b/index.html
@@ -176,6 +176,13 @@
             <font size="3">
                 <ul>
                     <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                            <span>[5] <b>Chen Gong</b>, Zhou Yang, Yunpeng Bai, Jieke Shi, Arunesh Sinha, Bowen Xu, David Lo, Xinwen Hou,
+                                Guoliang Fan, “Curiosity-Driven and Victim-Aware Adversarial Policies”,
+                                <i>Annual Computer Security Applications Conference (ACSAC)</i>,
+                               2022.
+                            </span>
+                    </p>
+                    <p style="text-indent: -1.6rem;margin-left: 0rem;">
                             <span>[4] Qiang He, Huangyuan Su, <b>Chen Gong</b>, Xinwen Hou,
                                 “MEPG: A Minimalist Ensemble Policy Gradient Framework for Deep Reinforcement Learning”,
                                 <i>Decision Awareness in Reinforcement Learning Workshop at ICML</i>,
