--- a/index.html
+++ b/index.html
@@ -179,7 +179,8 @@
                             <span>[5] <b>Chen Gong</b>, Zhou Yang, Yunpeng Bai, Jieke Shi, Arunesh Sinha, Bowen Xu, David Lo, Xinwen Hou,
                                 Guoliang Fan, “Curiosity-Driven and Victim-Aware Adversarial Policies”,
                                 <i>Annual Computer Security Applications Conference (ACSAC)</i>,
-                               2022.
+                                2022.
+                                (<b>Oral</b>)
                             </span>
                     </p>
                     <p style="text-indent: -1.6rem;margin-left: 0rem;">
