--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                                 Guoliang Fan, “Curiosity-Driven and Victim-Aware Adversarial Policies”,
                                 <i>Annual Computer Security Applications Conference (ACSAC)</i>,
                                 2022.
-                                (<b>Oral</b>)
+                                (<b>Technical Track, 12 pages</b>)
                             </span>
                     </p>
                     <p style="text-indent: -1.6rem;margin-left: 0rem;">
@@ -188,7 +188,7 @@
                                 “MEPG: A Minimalist Ensemble Policy Gradient Framework for Deep Reinforcement Learning”,
                                 <i>Decision Awareness in Reinforcement Learning Workshop at ICML</i>,
                                2022.
-                                (<b>Poster</b>)
+                                (<b>Poster, 11 pages</b>)
                                 [<a href="https://arxiv.org/abs/2109.10552" target="_blank">Arxiv</a>]
                             </span>
                     </p>
@@ -197,7 +197,7 @@
                             “Cooperative Multi-Agent Reinforcement Learning with Hypergraph Convolution”,
                             <i>International Joint Conference on Neural Networks (<b>IJCNN</b>)</i>,
                             2022.
-                            (<b>Oral</b>)
+                            (<b>Oral, 10 pages</b>)
                             [<a href="https://arxiv.org/pdf/2112.06771.pdf" target="_blank">Paper</a>]
                         </span>
                     </p>
@@ -206,7 +206,7 @@
                             “Wide-Sense Stationary Policy Optimization with Bellman Residual on Video Games”,
                             <i>IEEE International Conference on Multimedia and Expo (<b>ICME</b>)</i>,
                             2021: 1-6.
-                            (<b>Oral</b>)
+                            (<b>Oral, 6 pages</b>)
                             [<a href="https://ieeexplore.ieee.org/document/9428293" target="_blank">Paper</a>]
                         </span>
                     </p>
@@ -215,7 +215,7 @@
                             “Stable Training of Bellman Error in Reinforcement Learning”,
                             <i>International Conference on Neural Information Processing (<b>ICONIP</b>)</i>,
                             2020:439-448.
-                            (<b>Oral</b>)
+                            (<b>Oral, 10 pages</b>)
                             [<a href="https://link.springer.com/chapter/10.1007/978-3-030-63823-8_51" target="_blank">Paper</a>]
                         </span>
                     </p>
